# language-xats

./: .gitattributes  .hlint.yaml  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  cabal.project  cabal.project.local  language-xats.cabal
bench/: Bench.hs
src/Language/: XATS.hs
src/Language/XATS/: Dependency.hs  Lexer.x  Parser.y  Rewrite.hs  Type.hs
src/Language/XATS/Lexer/: Type.hs
src/Language/XATS/Type/: Common.hs  Lexer.hs  SymEnv.hs  Syntax.hs
src/Language/XATS/Type/Syntax/: Static.hs
test/: Spec.hs
