cabal-version: 1.18
name: language-xats
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
homepage: https://github.com/vmchale/language-xats#readme
synopsis: Language library for ATS3 Xanadu
description:
    Lexer, parser, and pretty-printer for the ATS3 language
category: Language, XATS
build-type: Simple
extra-source-files:
    cabal.project
extra-doc-files: README.md
                 CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/vmchale/language-xats

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Language.XATS
    build-tools: alex -any, happy >=1.17.1
    hs-source-dirs: src
    other-modules:
        Language.XATS.Type
        Language.XATS.Parser
        Language.XATS.Lexer
        Language.XATS.Lexer.Type
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    ghc-options: -Wall
    build-depends:
        base >=4.3 && <5,
        bytestring -any,
        array -any,
        mtl -any,
        transformers -any,
        prettyprinter -any

    if !impl(ghc >= 8.0)
      build-depends: semigroups

    if (flag(development) && impl(ghc >=7.2))
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

test-suite language-xats-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base -any,
        language-xats -any,
        hspec -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

benchmark language-xats-bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    hs-source-dirs: bench
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -O3 -Wall
    build-depends:
        base -any,
        language-xats -any,
        criterion -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
